# datathon-passos-magicos

./: Datathon.ipynb  README.md  pyproject.toml
app/: streamlit_app.py
app/models/: metrics_lgbm.json  mlp_meta.json
app/pages/: 1_Dashboard.py  2_Analise_Aluno.py  3_Predicao_Risco.py
data/processed/: base_historico.csv  predicoes_risco_2025.csv  predicoes_risco_2025_alternativo.csv  predicoes_risco_2025_composto.csv
data/raw/: BASE DE DADOS PEDE 2024 - DATATHON.xlsx
docs/: Dashboard Datathon Passos Magicos.pbip  Dashboard Datathon Passos Magicos.pbix  MODELO_RISCO.md
docs/Dashboard Datathon Passos Magicos.Report/: .platform  definition.pbir
docs/Dashboard Datathon Passos Magicos.SemanticModel/: .platform  diagramLayout.json
experiments/iter4_20260512T121855/: composite_results.json
experiments/iter4_20260512T122146/: composite_results.json  summary.json
experiments/iter4_20260512T122252/: composite_results.json  summary.json
experiments/iter4_20260512T122409/: summary.json
models/: lgbm.pkl  lgbm_calibrated.pkl  lgbm_composite.pkl  lgbm_seed42.pkl  metrics_full.json  mlp.pt  mlp_meta.json  preprocessor.pkl  stacking.pkl  xgb.pkl  xgb_calibrated.pkl
models/iter4/: lgbm_fase_0_2.pkl  lgbm_risk_pedra_drop.pkl
notebooks/: 01_data_prep.ipynb  02_eda_insights.ipynb  03_analise_perguntas.ipynb
reports/: auc_by_fase.csv  auc_by_gender.csv  auc_by_pedra.csv  lgbm_shap.csv  xgb_shap.csv
scripts/: run_iter4.py  run_lgbm_only.py  run_optuna_lgbm.py  run_pipeline.py
src/risk_model/: __init__.py  _mlp.py  _preprocess.py  config.py  data.py  evaluate.py  (+6 more)
(+47 files in other folders)
